# pointless-project

./: .gitignore  .gitmodules  Hello World.html  INTRODUCTION.html  INTRODUCTION.org  Program.cpp  PuzzleGen.cpp  README.html  README.md  README.org  STUDENTS.db  Share buttons.html  Tokens.txt  generator.cpp  makefile  makefile.template.mac  plans.org  structure.md  templateFooter.txt
Util:rng/: randomnumber.cpp
etc/: congrats.txt
lib/: base64.h
puzzles/: HelloWorld.cpp
src/: Makefile  ast-puzzle.bak  ast-puzzle.cpp  based-intro-puzzle.cpp  based-puzzle.cpp  based-rematch.cpp  binary-addition-puzzle.cpp  bst-puzzle.cpp  build.sh  color-puzzle.cpp  demo-puzzle.cpp  dr-pepper.cbp  encrypt-puzzle.cpp  fin-puzzle.cpp  graphics.cpp  html-generator.cpp  logicgate-puzzle.cpp  main  main.cpp  math-puzzle.cpp  maze-puzzle.cpp  pixel-puzzle.cpp  puzzle.cpp  puzzle.txt  rematch-based-puzzle.cpp  rematch-encrypt-puzzle.cpp  rematch-maze.cpp  rematch-puzzle.cpp  scraped-based-puzzle.cpp  utils.cpp
tests/: EntryPointTests.cpp  ExamplePuzzleTests.cpp  HtmlGeneratorTests.cpp  ParameterizedFileGenerationTests.cpp  PuzzleTests.cpp  RandomNumberGenTests.cpp  UtilityTests.cpp  WebScraperTests.cpp  ZipperTests.cpp  test
util/: Generator.cpp  Generator.h  HtmlGenerator.cpp  HtmlGenerator.h  Puzzle.cpp  Puzzle.h  StringFunctions.cpp  generatorHTML.h
web/: CMakeLists.txt  emailer.cpp  main copy.cpp  main.cpp  steps.txt
web-server/: contact-data.csv  download.html  download.php  index.html  index.php  login.html  login.php  new_user.html  (+5 more)
web/dbtesting/: STUDENTS.db  dbtest.cpp
(+189 files in other folders)
